--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <resources>
 
     <color name="colorPrimary">#0080f6</color>
-    <color name="colorPrimaryDark">#263e67</color>
+    <color name="colorPrimaryDark">#0048a4</color>
     <color name="colorAccent">#0080f6</color>
 
-    <color name="green_color">#263e67</color>
+    <color name="green_color">#0048a4</color>
     <color name="white_text_color">#FFFFFF</color>
 
 </resources>
